--- a/sendiri.css
+++ b/sendiri.css
@@ -1,8 +1,10 @@
 body {
-    background-image: url('img.jpeg');
-    background-size: cover;
-    background-position: center;
+    background-image: url('aas.jpg');
+    background-size:100%;
+    
+   
     background-color: #f8f9fa; /* Fallback color */
+    display: flex;
 }
 
 .table-container {
