--- a/sendiri.css
+++ b/sendiri.css
@@ -1,12 +1,10 @@
 body {
-    background-image: url('aas.jpg');
-    background-size:100%;
-    
-   
+    background-image: url('img.jpeg');
+    background-size: cover;
+    background-position: center;
     background-color: #f8f9fa; /* Fallback color */
-    display: flex;
 }
-/* m */
+
 .table-container {
     padding: 20px;
 }
@@ -20,10 +18,25 @@ h1 {
     margin-top: 15px;
 }
 
+blockquote{
+    margin-top: 7vh;
+}
+
 
 .navbar {
+    /* z-index: 0; Memastikan navbar berada di atas elemen lainnya */
+    /* margin-top: 0px;
+    top: 0;
     background-color: #6c757d;
-    margin-top: 1px;
+    margin-top: 1px; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right:0;
+    /* width: 250px; */
+    /* height: 100vh; */
+    background-color: #6c757d;
+    /* padding: 20px; */
 }
 
 .navbar-brand {
@@ -85,7 +98,7 @@ h1 {
     height: 100vh;
     background-color: #6c757d;
     padding: 20px;
-    border-right: 1px solid #ddd;
+    /* border-right: 1px solid #ddd; */
 }
 
 .sidebar-header {
@@ -94,10 +107,12 @@ h1 {
 
 .sidebar-header h5 {
     color: #fff;
+    margin-bottom: 3vh;
     font-weight: bold;
 }
 
 .list-group-item {
+    margin-bottom: 1vh;
     background-color: transparent;
     border: none;
     padding: 10px 15px;
